<resources>
    <string name="app_name">Blitz Boba</string>
    <string name="action_settings">Settings</string>
    <string name="about_us">Blitz Boba brings your favorite boba drinks on wheels! We\'ve simplified our menu where you understand your drink - just with a modern twist! \n\n

        We\'re more than just a truck! Blitz Boba was born from the idea of bringing communities together. Come hang out with us! We\'re all about good vibes with good people.</string>

    <string name="events_description">Click on our upcoming events and see where you can find us rolling thru the streets of Las Vegas!</string>
    <string name="you_can_order_online">You can also order on the app ahead of time!</string>
    <string name="event_details">Event Details</string>
    <string name="contact_us">Contact Us</string>
    <string name="events">Events</string>
    <string name="About">About</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="all">All</string>
    <string name="vegan">Vegan</string>
    <string name="specialty">Specialty</string>
    <string name="smoothie">Smoothie</string>


</resources>
