<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:minHeight="300dp"
    android:minWidth="1000dp"
    android:background="#000000"
    android:weightSum="1">


    <TextView
        android:id="@+id/contact_us_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:background="#FFCC22"
        android:layout_marginBottom="10dp"
        android:text="@string/contact_us"/>

    <TextView
        android:id="@+id/name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textboxform"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:textColor="#000000"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textboxform"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:textColor="#000000"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:text="@string/message"/>

    <EditText
        android:id="@+id/message_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="5dp"
        android:background="@drawable/textboxform"
        android:ems="10"
        android:maxLines="5"
        android:inputType="textMultiLine"
        android:textColor="#000000"
        android:layout_weight="0.51" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/submit"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/cancel"/>
    </LinearLayout>
</LinearLayout>