<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                />

            <LinearLayout
                android:id="@+id/about_section_LL"
                android:layout_below="@id/viewPager"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/about_title_textView"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                tools:text="About"
                tools:textSize="20sp"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:focusableInTouchMode="true"
                android:text="@string/about_us"
                android:textAlignment="center"
                android:textColor="#B3FFFFFF"
                android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/events_section_LL"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_section_LL"
                android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/events_title_textView"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                tools:text="Events"
                tools:textSize="20sp"/>


            <TextView
                android:id="@+id/events_description_textView"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#B3FFFFFF"
                android:text="@string/events_description"
                tools:textSize="15sp"/>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/events_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/events_section_LL"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp" />

            <Button
                android:id="@+id/contact_us_button"
                android:layout_below="@id/events_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimaryDark"
                android:text="@string/contact_us"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>